tests/ui/associated-traits/use-extra-lifetime-arg.stderr
error[E0107]: associated type takes 0 lifetime arguments but 1 lifetime argument was supplied
  --> $DIR/use-extra-lifetime-arg.rs:7:42
   |
LL |     fn handle<'a>(&self, arg: impl Self::Arg<'a>);
   |                                          ^^^---- help: remove the unnecessary generics
   |                                          |
   |                                          expected 0 lifetime arguments
   |
note: associated type defined here, with 0 lifetime parameters
  --> $DIR/use-extra-lifetime-arg.rs:5:11
   |
LL |     trait Arg;
   |           ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0107`.
